--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" style="height: 100%;">
 
 <body style="padding: 0; margin: 0;height: 100%">
-    <img id="iframeid" src='https://sc02gataptb.pre.atm.tmob.cat/alerts/' title="ALTERACIONS">
+    <iframe title="ALTERACIONS" id = "iframeid" src="https://raw.githubusercontent.com/GestioTransport/alteracions/master/loading.png" width="100%" height="300"></iframe>
     <p id="hora"></p>
 </body>
 <script>
