--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" style="height: 100%;">
 
 <body style="padding: 0; margin: 0;height: 100%">
-    <iframe title="ALTERACIONS" id = "iframeid" src="https://raw.githubusercontent.com/GestioTransport/alteracions/master/loading.png" width="100%" height="300"></iframe>
+    <img title="ALTERACIONS" id = "iframeid" src="https://raw.githubusercontent.com/GestioTransport/alteracions/master/loading.png"></img>
     <p id="hora"></p>
 </body>
 <script>
@@ -12,7 +12,7 @@
     }
 
     function actualitza(){
-        document.getElementById('iframeid').src = 'https://sc02gataptb.pre.atm.tmob.cat/alerts/';
+        document.getElementById('iframeid').src = 'https://www.netflix.com/es/';
 
         var currentdate = new Date();
         var datetime = "Last Sync: " + currentdate.getDate() + "/"
