--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     function actualitza(){
-        document.getElementById('iframeid').src = 'https://www.netflix.com/es/';
+        document.getElementById('iframeid').src = 'https://www.8a.nu/';
 
         var currentdate = new Date();
         var datetime = "Last Sync: " + currentdate.getDate() + "/"
